--- a/deno.json
+++ b/deno.json
@@ -7,6 +7,7 @@
   "imports": {
     "@std/assert": "jsr:@std/assert@1",
 
+    "@ADTs/": "./src/ADTs/",
     "@data-structures/": "./src/data-structures/",
     "@algorithms/": "./src/algorithms/",
     "@models/": "./src/models/",
