--- a/deno.json
+++ b/deno.json
@@ -2,7 +2,8 @@
   "tasks": {
     "dev": "deno run --watch playground.ts",
     "test": "deno test",
-    "lint": "deno lint --compact"
+    "lint": "deno lint --compact",
+    "check": "deno check"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1",
