--- a/deno.json
+++ b/deno.json
@@ -1,13 +1,15 @@
 {
   "tasks": {
     "dev": "deno run --watch playground.ts",
+    "prepare": "husky install",
     "test": "deno test",
     "lint": "deno lint --compact",
     "check": "deno check"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1",
-
+    "husky": "npm:husky@^9.1.7",
+    "lint-staged": "npm:lint-staged@^16.0.0",
     "@ADTs/": "./src/ADTs/",
     "@data-structures/": "./src/data-structures/",
     "@algorithms/": "./src/algorithms/",
