--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -28,7 +28,10 @@ jobs:
       - name: Setup Deno
         uses: denoland/setup-deno@v1
         with:
-          deno-version: v1.x
+          deno-version: v2.x
+
+      - name: Remove old lockfile
+        run: rm -f deno.lock
 
       - name: Run checks
         run: |
