--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -26,16 +26,15 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Deno
-        # uses: denoland/setup-deno@v1
-        uses: denoland/setup-deno@61fe2df320078202e33d7d5ad347e7dcfa0e8f31  # v1.1.2
+        uses: denoland/setup-deno@v1
         with:
-          deno-version: v1.x
+          deno-version: v2.x
 
-      - name: Run linter
-        run: deno lint --compact
-
-      - name: Run tests
-        run: deno test -A
+      - name: Remove old lockfile
+        run: rm -f deno.lock
 
       - name: Run checks
-        run: deno check
+        run: |
+          deno lint --compact
+          deno test -A
+          deno check
